feat: add scheduled multi-course selection
